# idifcy

./: .gitignore  Dockerfile  Homepage.py  README.md  pyproject.toml  requirements.txt  ruff.toml
pages/: 1_Viewer.py  1_🔍_Viewer.py  2_Excel-IDS_Converter.py  2_Test.py  3_TODO.py  3_Test.py  4_Model_Data.py  4_TODO_2.py  4_TODO_model_data.py  5_Model_Stats.py  5_TODO_2.py  _test.py  _🎮_Viewer.py  _🔍_Viewer.py  _🧮_quantities.py
pages/components/: constants.py  custom_sidebar.py  ids_check_res_df.py  load_data.py
tools/: graph_maker.py  ifchelper.py  pandashelper.py
