[tool.poetry]
name = "idifcy"
version = "0.1.1"
description = "IFC quality assurance using IDS."
authors = ["tmlnv <tmlnv@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = ">=1.28.0,<1.29.0"
ifcopenshell = "0.7.0.230329"
ifctester = ">=0.0.231005,<0.1.0"
matplotlib = ">=3.7.1,<3.8.0"
plotly = "5.13.1"
pandas = ">=1.5.3,<1.6.0"
loguru = "^0.7.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
neovim = "^0.3.1"
deptry = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
